<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_masuk"
    tools:context=".views.SigninActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_layout_masuk"
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" >

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:textColor="@color/abuabu"
                android:fontFamily="@font/kufamregular"
                android:text="@string/username_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                style="@style/edittextprimary"
                android:inputType="text"
                android:lines="1"
                android:id="@+id/et_username"
                android:paddingLeft="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginBottom="12dp"
                android:textSize="16sp"
                android:textColor="@color/abuabu"
                android:fontFamily="@font/kufamregular"
                android:text="@string/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                style="@style/edittextprimary"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="12dp"/>
        </LinearLayout>

        <TextView
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:layout_marginEnd="18dp"
            android:textColor="@color/abuabu"
            android:fontFamily="@font/kufamregular"
            android:text="@string/forgot_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            style="@style/btn_orangeprimary"
            android:id="@+id/btn_masuk"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:text="@string/masuk" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kufamregular"
        android:text="Buat Akun Baru"
        android:textColor="@color/hitamPrimary"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>