<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.EditProfileActivity">

    <ScrollView
        android:scrollbars="none"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bggetstarted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/kufamsemibold"
                android:lineSpacingExtra="9dp"
                android:text="@string/edit_profile_label"
                android:textAlignment="center"
                android:textColor="@color/hitamPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/kufamsemibold"
                android:lineSpacingExtra="9dp"
                android:text="Kami menyarankan kamu untuk\nmenggunakan informasi yang benar"
                android:textAlignment="center"
                android:textColor="@color/hitamPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <LinearLayout
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_masuk"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <View
                        android:id="@+id/view3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/bg_view_cicle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <com.github.florent37.shapeofview.shapes.CircleView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        app:layout_constraintBottom_toBottomOf="@+id/view3"
                        app:layout_constraintEnd_toEndOf="@+id/view3"
                        app:layout_constraintStart_toStartOf="@+id/view3"
                        app:layout_constraintTop_toTopOf="@+id/view3">
                        <ImageView
                            android:id="@+id/pic_edit_photo_user"
                            android:scaleType="centerCrop"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/ic_nopic"/>
                    </com.github.florent37.shapeofview.shapes.CircleView>

                    <Button
                        android:id="@+id/btn_edit_fotoprofil"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/add_profil_photo"
                        app:layout_constraintBottom_toBottomOf="@+id/view3"
                        app:layout_constraintEnd_toEndOf="@+id/view3" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tv_edittext"
                        android:layout_marginBottom="12dp"
                        android:text="@string/nama_label" />

                    <EditText
                        style="@style/edittextprimary"
                        android:id="@+id/et_nama"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tv_edittext"
                        android:layout_marginBottom="8dp"
                        android:text="@string/kelamin_label" />

                    <EditText
                        style="@style/edittextprimary"
                        android:inputType="text"
                        android:id="@+id/et_kelamin"
                        android:lines="1"
                        android:paddingLeft="12dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tv_edittext"
                        android:layout_marginBottom="12dp"
                        android:text="@string/username_label" />

                    <EditText
                        style="@style/edittextprimary"
                        android:id="@+id/et_username"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tv_edittext"
                        android:layout_marginBottom="12dp"
                        android:text="@string/password_label" />

                    <EditText
                        style="@style/edittextprimary"
                        android:id="@+id/et_password"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tv_edittext"
                        android:layout_marginBottom="12dp"
                        android:text="@string/email_label" />

                    <EditText
                        android:editable="false"
                        style="@style/edittextprimary"
                        android:id="@+id/et_email"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="8dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:weightSum="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/btn_kembalikemyprofiledarieditprofile"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_btn_daftar"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_back" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="24dp"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <Button
                        style="@style/btn_orangeprimary"
                        android:id="@+id/btn_saveprofile"
                        android:text="@string/btn_save_profile_label" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>